Update Jersey Libs to 3.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
 		<version>7</version>
+		<relativePath/>
 	</parent>
 
 	<scm>
@@ -39,7 +40,7 @@
 	<properties>
 		<maven.surefire.report.plugin.version>2.22.2</maven.surefire.report.plugin.version>
 		<maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
-		<jersey.version>2.24.1</jersey.version>
+		<jersey.version>3.0.1</jersey.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<slf4j.version>1.7.30</slf4j.version>
@@ -65,6 +66,17 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>3.0.0</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
